@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-05-08  Josue Andrade Gomes  &lt;josuegomes@gmail.com&gt;
+
+<UL>
+  <LI> magick/nt_base.h, libxml/include/win32config.h (vsnprintf):
+        Fixed compilation issue noticed with Visual C++ 2008.
+
+</UL>
+<p>
 2008-05-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
